force-app/main/default/objects/Delivery_Order_Item__c/Delivery_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Order Item</label>
    <nameField>
        <displayFormat>DNL-{0000000000}</displayFormat>
        <label>Delivery Order Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>