force-app/main/default/objects/Delivery_Order_Item__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Order Items</relationshipLabel>
    <relationshipName>Delivery_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>