force-app/main/default/objects/Delivery_Order_Item__c/fields/Customer_Model_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Model Product</label>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipName>Delivery_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>