force-app/main/default/objects/Delivery_Order_Item__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>Delivery_Order__r.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>交货日</label>
    <type>Text</type>
</CustomField>