force-app/main/default/objects/Delivery_Order_Item__c/fields/Delivery_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Order</label>
    <referenceTo>Delivery_Order__c</referenceTo>
    <relationshipName>Delivery_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>