force-app/main/default/objects/Delivery_Order_Item__c/fields/Delivery_Order_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Item_Status__c</fullName>
    <label>Delivery Order Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>