force-app/main/default/objects/Delivery_Order_Item__c/fields/Delivery_Order_Text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Text__c</fullName>
    <formula>Delivery_Order__r.SAP_Delivery_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Order Text</label>
    <type>Text</type>
</CustomField>