force-app/main/default/objects/Delivery_Order_Item__c/fields/Delivery_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity__c</fullName>
    <label>Delivery Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>