force-app/main/default/objects/Delivery_Order_Item__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>Order_Product__c</referenceTo>
    <relationshipName>Delivery_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>