force-app/main/default/objects/Delivery_Order_Item__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <formula>Order__r.SAP_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO号</label>
    <type>Text</type>
</CustomField>