force-app/main/default/objects/Delivery_Order_Item__c/fields/POD_Date__c.field-meta.xml
<CustomField>
    <fullName>POD_Date__c</fullName>
    <label>POD Date</label>
    <type>Date</type>
</CustomField>