force-app/main/default/objects/Delivery_Order_Item__c/fields/POD_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>POD_Line_Status__c</fullName>
    <label>POD Line Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>