force-app/main/default/objects/Delivery_Order_Item__c/fields/POD_Reason__c.field-meta.xml
<CustomField>
    <fullName>POD_Reason__c</fullName>
    <label>POD Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>