force-app/main/default/objects/Delivery_Order_Item__c/fields/Product_Customer_Model_del__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer_Model_del__c</fullName>
    <label>Product Customer Model(del)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>