force-app/main/default/objects/Delivery_Order_Item__c/fields/Product_Export_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Export_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Export Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Delivery_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>