force-app/main/default/objects/Delivery_Order_Item__c/fields/Product_Factory_Model_del__c.field-meta.xml
<CustomField>
    <fullName>Product_Factory_Model_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Factory Model(del)</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Delivery_Order_Item1</relationshipName>
    <type>Lookup</type>
</CustomField>