force-app/main/default/objects/Delivery_Order_Item__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>SAP_Product_Line__r.Mapping_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>