force-app/main/default/objects/Delivery_Order_Item__c/fields/SAP_Customer_Model_Product__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Model_Product__c</fullName>
    <label>SAP Customer Model Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>