force-app/main/default/objects/Delivery_Order_Item__c/fields/SAP_Delivery_Order_Item_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Delivery_Order_Item_No__c</fullName>
    <label>SAP Delivery Order Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>