force-app/main/default/objects/Delivery_Order_Item__c/fields/SAP_Order_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_No__c</fullName>
    <formula>Order__r.SAP_Order_No__c</formula>
    <label>SAP Order No</label>
    <type>Text</type>
</CustomField>