force-app/main/default/objects/Delivery_Order_Item__c/fields/SAP_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Product Line</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipName>Delivery_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>