force-app/main/default/objects/Delivery_Order_Item__c/fields/Sap_Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Sap_Product_Line_Code__c</fullName>
    <label>Sap Product Line Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>