force-app/main/default/objects/Delivery_Order_Item__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <formula>Order__r.SAP_Ship_to_Address__c</formula>
    <label>交货地</label>
    <type>Text</type>
</CustomField>